# Android-FFMPEG

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zero/licht/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_zero_licht_ffmpeg_video_utils.h  decode_video.c  decodevideo.c  dn_ffmpeg_player.c  ffmpeg_player.c  hardcry.cpp  native-lib.cpp
app/src/main/cpp/include/libavcodec/: avcodec.h
app/src/main/cpp/include/libswscale/: swscale.h
app/src/main/java/com/zero/licht/ffmpeg/: MainActivity.java  video_utils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/zero/licht/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
